SFDC DevOps Test/src/objects/Defect__c.object
<CustomObject>
    <description>TOOLKIT - This object represents a failure to meet a requirement.</description>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related capability to the defect</description>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Defect__c</fullName>
        <description>Reflects the cause of the defect.</description>
        <label>Cause of Defect</label>
        <picklist>
            <picklistValues>
                <fullName>Access Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLS Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect/Invalid Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstood Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naming Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Testable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verfiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oversight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundant Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reusability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Populated through a trigger with the date when the defect was closed</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Detail__c</fullName>
        <description>Type of the Component in which the defect is identified</description>
        <label>Component Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Buttons or Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Functionality / Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security / Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow &amp; Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Object/Functional Area where the defect is identified</description>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report / Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Pick list value for Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>TEXT (Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_left__c</fullName>
        <formula>if (OR(Current_Status__c =&quot;Developer Assigned&quot;,Current_Status__c=&quot;Fixed&quot;, Current_Status__c =&quot;Fix in Process&quot;),if(Text(Target_Completion_Date__c - TODAY())&lt;&gt;&quot;&quot;,Text(Target_Completion_Date__c - TODAY()) &amp; &quot; Day(s) Left&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Age__c</fullName>
        <formula>IF(UPPER(MID( Current_Status__c , 1, 6))=&quot;CLOSED&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/365) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/365))&amp; &quot; Y+&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/30) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/30))&amp; &quot; M+&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/7) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/7))&amp; &quot; W+&quot;, TEXT(FLOOR(Closed_Date__c - CreatedDate))&amp; &quot; D&quot;))), IF(FLOOR((NOW() - CreatedDate)/365) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/365))&amp; &quot; Y+&quot;, IF(FLOOR((NOW() - CreatedDate)/30) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/30))&amp; &quot; M+&quot;, IF(FLOOR((NOW() - CreatedDate)/7) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/7))&amp; &quot; W+&quot;, TEXT(FLOOR(NOW() - CreatedDate))&amp; &quot; D&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Detected__c</fullName>
        <description>It shows the Phase of the project in which the defect is identified</description>
        <label>Defect Detected</label>
        <picklist>
            <picklistValues>
                <fullName>Requirement Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Go-Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Script Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <description>This field specifies type of the defect</description>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Script Review Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Detailed Description of the defect</description>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Developer to whom the defect has been assigned</description>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <description>Developer&apos;s comments on the defect</description>
        <label>Developer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment where the defect has been identified</description>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request related to the defect</description>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who reported the defect</description>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retest_Status__c</fullName>
        <description>Status of retest of the defect</description>
        <label>Retest Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who retested the defect</description>
        <label>Retested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retesting_Comments__c</fullName>
        <description>Comments on retesting of the defect</description>
        <label>Retesting Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the defect</description>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Business Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - System Outage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the defect</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved By Business - Ready to Assign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Not Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Salesforce.com Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Enhancement Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Can Not Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Expected Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not a defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Opened - Failed Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Default as True</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the defect</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <description>Used to hold the date when the defect is expected to be fixed</description>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <description>In which phase of testing the defect was identified</description>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Team QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Test Script</description>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Type__c</fullName>
        <description>In which type of testing the defect was identified</description>
        <label>Testing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_Reopened__c</fullName>
        <description>Used to Store the number of time the defect has been reopened</description>
        <label>#of Times Reopened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Component__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Testing_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Environment__c</columns>
        <columns>Reported_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Developer_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(AND(UPPER(MID( PRIORVALUE(Current_Status__c), 1, 5))&lt;&gt;&quot;FIXED&quot;,UPPER(MID( Current_Status__c , 1, 5))=&quot;FIXED&quot;),AND(UPPER(PRIORVALUE(Current_Status__c))&lt;&gt;&quot;READY TO RETEST&quot;,UPPER(Current_Status__c)=&quot;READY TO RETEST&quot;)),OR(ISNULL(Developer_Comments__c),TRIM(Developer_Comments__c)=&quot;&quot;,TRIM(PRIORVALUE(Developer_Comments__c)) = TRIM(Developer_Comments__c)))</errorConditionFormula>
        <errorMessage>Developer Comments must be updated when Status is fixed or Ready to restest</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Retest_Comments</fullName>
        <active>true</active>
        <description>Used to enforce the user to enter the retest comment after retest</description>
        <errorConditionFormula>AND(OR(ISNULL(Retesting_Comments__c),TRIM(Retesting_Comments__c)=&quot;&quot;,TRIM(PRIORVALUE(Retesting_Comments__c)) = TRIM(Retesting_Comments__c)), OR(AND(UPPER(MID(PRIORVALUE(Current_Status__c),1,9)) &lt;&gt; &quot;RE-OPENED&quot;,UPPER(MID(Current_Status__c,1,9)) = &quot;RE-OPENED&quot;), AND(UPPER(PRIORVALUE(Current_Status__c)) &lt;&gt; &quot;CLOSED - RESOLVED&quot;, UPPER(Current_Status__c) = &quot;CLOSED - RESOLVED&quot;)))</errorConditionFormula>
        <errorMessage>Retest comments must be updated while reopening or closing error location defect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Retest_Status</fullName>
        <active>true</active>
        <description>Used to enforce the user to enter the Retest status after retest</description>
        <errorConditionFormula>AND(OR(UPPER(Current_Status__c) = &quot;CLOSED - RESOLVED&quot;,UPPER(MID(Current_Status__c,1,9)) = &quot;RE-OPENED&quot;), OR(ISNULL(TEXT(Retest_Status__c)), TEXT(Retest_Status__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>Retest status and Retest comment is required when closing or Re-opening a defect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Target_Completion_Date</fullName>
        <active>true</active>
        <description>Prevent user from saving a past date as Target completion date</description>
        <errorConditionFormula>AND(OR(Current_Status__c =&quot;Developer Assigned&quot;,Current_Status__c=&quot;Fixed&quot;, Current_Status__c =&quot;Fix in Process&quot;),Target_Completion_Date__c &lt;  TODAY())</errorConditionFormula>
        <errorMessage>Target completion date cannot be in past date. Please enter current/future date or clear the value in the field</errorMessage>
    </validationRules>
</CustomObject>